// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Tooltip renders successfully 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
    >
      <TouchableOpacity
        activeOpacity={1}
      />
      <Modal
        animationType="fade"
        hardwareAccelerated={false}
        transparent={true}
        visible={false}
      >
        <TouchableOpacity
          activeOpacity={1}
          style={
            Object {
              "backgroundColor": "rgba(250, 250, 250, 0.70)",
              "flex": 1,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "backgroundColor": "transparent",
                  "height": 0,
                  "left": 0,
                  "overflow": "visible",
                  "position": "absolute",
                  "top": 0,
                  "width": 0,
                }
              }
            />
            <View
              style={
                Object {
                  "left": -7.5,
                  "position": "absolute",
                  "top": -2,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderBottomColor": "white",
                      "borderBottomWidth": 15,
                      "borderLeftColor": "transparent",
                      "borderLeftWidth": 8,
                      "borderRightColor": "transparent",
                      "borderRightWidth": 8,
                      "borderStyle": "solid",
                      "height": 0,
                      "width": 0,
                    },
                    Object {
                      "borderBottomColor": "#617080",
                    },
                    Object {},
                  ]
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#617080",
                  "borderRadius": 10,
                  "display": "flex",
                  "flex": 1,
                  "height": 40,
                  "justifyContent": "flex-start",
                  "left": -17.999,
                  "padding": 10,
                  "position": "absolute",
                  "top": 10,
                  "width": 150,
                }
              }
            />
          </View>
        </TouchableOpacity>
      </Modal>
    </View>
  </View>
</View>
`;

exports[`components/Tooltip renders with custom color successfully 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
    >
      <TouchableOpacity
        activeOpacity={1}
      />
      <Modal
        animationType="fade"
        hardwareAccelerated={false}
        transparent={true}
        visible={false}
      >
        <TouchableOpacity
          activeOpacity={1}
          style={
            Object {
              "backgroundColor": "#222C44",
              "flex": 1,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "backgroundColor": "#fff",
                  "height": 0,
                  "left": 0,
                  "overflow": "visible",
                  "position": "absolute",
                  "top": 0,
                  "width": 0,
                }
              }
            />
            <View
              style={
                Object {
                  "left": -7.5,
                  "position": "absolute",
                  "top": -2,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderBottomColor": "white",
                      "borderBottomWidth": 15,
                      "borderLeftColor": "transparent",
                      "borderLeftWidth": 8,
                      "borderRightColor": "transparent",
                      "borderRightWidth": 8,
                      "borderStyle": "solid",
                      "height": 0,
                      "width": 0,
                    },
                    Object {
                      "borderBottomColor": "#fff",
                    },
                    Object {},
                  ]
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#222C44",
                  "borderRadius": 10,
                  "display": "flex",
                  "flex": 1,
                  "height": 40,
                  "justifyContent": "flex-start",
                  "left": -17.999,
                  "padding": 10,
                  "position": "absolute",
                  "top": 10,
                  "width": 150,
                }
              }
            />
          </View>
        </TouchableOpacity>
      </Modal>
    </View>
  </View>
</View>
`;

exports[`components/Tooltip renders with custom size successfully 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
    >
      <TouchableOpacity
        activeOpacity={1}
      />
      <Modal
        animationType="fade"
        hardwareAccelerated={false}
        transparent={true}
        visible={false}
      >
        <TouchableOpacity
          activeOpacity={1}
          style={
            Object {
              "backgroundColor": "rgba(250, 250, 250, 0.70)",
              "flex": 1,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "backgroundColor": "transparent",
                  "height": 0,
                  "left": 0,
                  "overflow": "visible",
                  "position": "absolute",
                  "top": 0,
                  "width": 0,
                }
              }
            />
            <View
              style={
                Object {
                  "left": -7.5,
                  "position": "absolute",
                  "top": -2,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderBottomColor": "white",
                      "borderBottomWidth": 15,
                      "borderLeftColor": "transparent",
                      "borderLeftWidth": 8,
                      "borderRightColor": "transparent",
                      "borderRightWidth": 8,
                      "borderStyle": "solid",
                      "height": 0,
                      "width": 0,
                    },
                    Object {
                      "borderBottomColor": "#617080",
                    },
                    Object {},
                  ]
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#617080",
                  "borderRadius": 10,
                  "display": "flex",
                  "flex": 1,
                  "height": 100,
                  "justifyContent": "flex-start",
                  "left": -17.999,
                  "padding": 10,
                  "position": "absolute",
                  "top": 10,
                  "width": 100,
                }
              }
            />
          </View>
        </TouchableOpacity>
      </Modal>
    </View>
  </View>
</View>
`;

exports[`components/Tooltip renders with overlay successfully 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
    >
      <TouchableOpacity
        activeOpacity={1}
      />
      <Modal
        animationType="fade"
        hardwareAccelerated={false}
        transparent={true}
        visible={false}
      >
        <TouchableOpacity
          activeOpacity={1}
          style={
            Object {
              "backgroundColor": "#222C44",
              "flex": 1,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "backgroundColor": "transparent",
                  "height": 0,
                  "left": 0,
                  "overflow": "visible",
                  "position": "absolute",
                  "top": 0,
                  "width": 0,
                }
              }
            />
            <View
              style={
                Object {
                  "left": -7.5,
                  "position": "absolute",
                  "top": -2,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderBottomColor": "white",
                      "borderBottomWidth": 15,
                      "borderLeftColor": "transparent",
                      "borderLeftWidth": 8,
                      "borderRightColor": "transparent",
                      "borderRightWidth": 8,
                      "borderStyle": "solid",
                      "height": 0,
                      "width": 0,
                    },
                    Object {
                      "borderBottomColor": "#617080",
                    },
                    Object {},
                  ]
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#617080",
                  "borderRadius": 10,
                  "display": "flex",
                  "flex": 1,
                  "height": 40,
                  "justifyContent": "flex-start",
                  "left": -17.999,
                  "padding": 10,
                  "position": "absolute",
                  "top": 10,
                  "width": 150,
                }
              }
            />
          </View>
        </TouchableOpacity>
      </Modal>
    </View>
  </View>
</View>
`;

exports[`components/Tooltip renders with pointer successfully 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
    >
      <TouchableOpacity
        activeOpacity={1}
      />
      <Modal
        animationType="fade"
        hardwareAccelerated={false}
        transparent={true}
        visible={false}
      >
        <TouchableOpacity
          activeOpacity={1}
          style={
            Object {
              "backgroundColor": "rgba(250, 250, 250, 0.70)",
              "flex": 1,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "backgroundColor": "transparent",
                  "height": 0,
                  "left": 0,
                  "overflow": "visible",
                  "position": "absolute",
                  "top": 0,
                  "width": 0,
                }
              }
            />
            <View
              style={
                Object {
                  "left": -7.5,
                  "position": "absolute",
                  "top": -2,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderBottomColor": "white",
                      "borderBottomWidth": 15,
                      "borderLeftColor": "transparent",
                      "borderLeftWidth": 8,
                      "borderRightColor": "transparent",
                      "borderRightWidth": 8,
                      "borderStyle": "solid",
                      "height": 0,
                      "width": 0,
                    },
                    Object {
                      "borderBottomColor": "#617080",
                    },
                    Object {},
                  ]
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#617080",
                  "borderRadius": 10,
                  "display": "flex",
                  "flex": 1,
                  "height": 40,
                  "justifyContent": "flex-start",
                  "left": -17.999,
                  "padding": 10,
                  "position": "absolute",
                  "top": 10,
                  "width": 150,
                }
              }
            />
          </View>
        </TouchableOpacity>
      </Modal>
    </View>
  </View>
</View>
`;

exports[`components/Tooltip renders with toggleOnPress successfully 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
    >
      <TouchableOpacity
        activeOpacity={1}
      />
      <Modal
        animationType="fade"
        hardwareAccelerated={false}
        transparent={true}
        visible={false}
      >
        <TouchableOpacity
          activeOpacity={1}
          style={
            Object {
              "backgroundColor": "rgba(250, 250, 250, 0.70)",
              "flex": 1,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "backgroundColor": "transparent",
                  "height": 0,
                  "left": 0,
                  "overflow": "visible",
                  "position": "absolute",
                  "top": 0,
                  "width": 0,
                }
              }
            />
            <View
              style={
                Object {
                  "left": -7.5,
                  "position": "absolute",
                  "top": -2,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderBottomColor": "white",
                      "borderBottomWidth": 15,
                      "borderLeftColor": "transparent",
                      "borderLeftWidth": 8,
                      "borderRightColor": "transparent",
                      "borderRightWidth": 8,
                      "borderStyle": "solid",
                      "height": 0,
                      "width": 0,
                    },
                    Object {
                      "borderBottomColor": "#617080",
                    },
                    Object {},
                  ]
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#617080",
                  "borderRadius": 10,
                  "display": "flex",
                  "flex": 1,
                  "height": 40,
                  "justifyContent": "flex-start",
                  "left": -17.999,
                  "padding": 10,
                  "position": "absolute",
                  "top": 10,
                  "width": 150,
                }
              }
            />
          </View>
        </TouchableOpacity>
      </Modal>
    </View>
  </View>
</View>
`;
